crates/tools/src/vet/snapshots/kclvm_tools__vet__tests__test_expr_builder__build_with_json_no_schema_name-3.snap
---
source: tools/src/vet/tests.rs
expression: got_ast_json_str
---
{
  "column": 0,
  "end_column": 1,
  "end_line": 1,
  "filename": "<workspace>/plain_value.k.json",
  "line": 1,
  "node": {
    "binary_suffix": null,
    "type": "NumberLit",
    "value": {
      "type": "Int",
      "value": 1
    }
  }
}
