crates/tools/src/vet/snapshots/kclvm_tools__vet__tests__test_expr_builder__build_with_json_no_schema_name-4.snap
---
source: tools/src/vet/tests.rs
expression: got_ast_json_str
---
{
  "column": 0,
  "end_column": 1,
  "end_line": 7,
  "filename": "<workspace>/list.k.json",
  "line": 1,
  "node": {
    "ctx": "Load",
    "elts": [
      {
        "column": 4,
        "end_column": 5,
        "end_line": 6,
        "filename": "<workspace>/list.k.json",
        "line": 2,
        "node": {
          "items": [
            {
              "column": 4,
              "end_column": 5,
              "end_line": 6,
              "filename": "<workspace>/list.k.json",
              "line": 2,
              "node": {
                "key": {
                  "column": 8,
                  "end_column": 13,
                  "end_line": 4,
                  "filename": "<workspace>/list.k.json",
                  "line": 4,
                  "node": {
                    "is_long_string": false,
                    "raw_value": "\"age\"",
                    "type": "StringLit",
                    "value": "age"
                  }
                },
                "operation": "Union",
                "value": {
                  "column": 15,
                  "end_column": 17,
                  "end_line": 4,
                  "filename": "<workspace>/list.k.json",
                  "line": 4,
                  "node": {
                    "binary_suffix": null,
                    "type": "NumberLit",
                    "value": {
                      "type": "Int",
                      "value": 18
                    }
                  }
                }
              }
            },
            {
              "column": 4,
              "end_column": 5,
              "end_line": 6,
              "filename": "<workspace>/list.k.json",
              "line": 2,
              "node": {
                "key": {
                  "column": 8,
                  "end_column": 17,
                  "end_line": 5,
                  "filename": "<workspace>/list.k.json",
                  "line": 5,
                  "node": {
                    "is_long_string": false,
                    "raw_value": "\"message\"",
                    "type": "StringLit",
                    "value": "message"
                  }
                },
                "operation": "Union",
                "value": {
                  "column": 19,
                  "end_column": 34,
                  "end_line": 5,
                  "filename": "<workspace>/list.k.json",
                  "line": 5,
                  "node": {
                    "is_long_string": false,
                    "raw_value": "\"This is Alice\"",
                    "type": "StringLit",
                    "value": "This is Alice"
                  }
                }
              }
            },
            {
              "column": 4,
              "end_column": 5,
              "end_line": 6,
              "filename": "<workspace>/list.k.json",
              "line": 2,
              "node": {
                "key": {
                  "column": 8,
                  "end_column": 14,
                  "end_line": 3,
                  "filename": "<workspace>/list.k.json",
                  "line": 3,
                  "node": {
                    "is_long_string": false,
                    "raw_value": "\"name\"",
                    "type": "StringLit",
                    "value": "name"
                  }
                },
                "operation": "Union",
                "value": {
                  "column": 16,
                  "end_column": 23,
                  "end_line": 3,
                  "filename": "<workspace>/list.k.json",
                  "line": 3,
                  "node": {
                    "is_long_string": false,
                    "raw_value": "\"Alice\"",
                    "type": "StringLit",
                    "value": "Alice"
                  }
                }
              }
            }
          ],
          "type": "Config"
        }
      }
    ],
    "type": "List"
  }
}
